tests/error/comptime/pointer_arithmetic14.bz
// error: invalid pointer arithmetic operation with type '*int32' and offset 3
// note: while evaluating expression at compile time
// note: address points to an element at index 3 in an array of size 5 in this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let a: [[5: int32], [5: int32]];
		&a[0, 0] + 3 + 3;
	});
}
